--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>pagina Taynara</title>
 </head>
 <body>
-     <h1>Visan 9¾ Designer</h1>
-     <p>Está pagina foi criada para projetos de casas, dando um aspecto
+    <header>
+        <h1>Visan 9¾ Designer</h1>
+        <p>Está pagina foi criada para projetos de casas, dando um aspecto
         mais bonito e aconchegante para os moradores.</p>
+    </header>
 </body>
 </html>
