--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>pagina Taynara</title>
 </head>
 <body>
-    <header>
+    <header class="cabeçalho">
+        <img class="imgcabeçalho" src="logosite.png" alt="logo do site, referente as tr;"
+        <ul class="intenscabeçalho">
+        <li class="iteml">ITINERÁRIOS</li>
+        <li class="item2">PROJETOS</li>
+        </ul>
         <h1>Visan 9¾ Designer</h1>
         <p>Está pagina foi criada para projetos de casas, dando um aspecto
         mais bonito e aconchegante para os moradores.</p>
